--- a/爬虫.md
+++ b/爬虫.md
@@ -61,3 +61,16 @@ def downPic(chorm, round=5):
 if __name__ == '__main__':
     r = chorm()
     downPic(r,10)
+    
+    
+    
+    
+    
+user = '****'
+password = '***.'
+
+
+proxies = {
+    "http": "http://%s:%s@www.***.com" % (user, password),
+    "https": "http://%s:%s@www.***.com" % (user, password)
+}
